--- a/MiBandImport/Form1.resx
+++ b/MiBandImport/Form1.resx
@@ -129,6 +129,33 @@
     <value>Horizontal</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="buttonExport.Enabled" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="buttonExport.Location" type="System.Drawing.Point, System.Drawing">
+    <value>13, 61</value>
+  </data>
+  <data name="buttonExport.Size" type="System.Drawing.Size, System.Drawing">
+    <value>105, 23</value>
+  </data>
+  <data name="buttonExport.TabIndex" type="System.Int32, mscorlib">
+    <value>20</value>
+  </data>
+  <data name="buttonExport.Text" xml:space="preserve">
+    <value>Export Data</value>
+  </data>
+  <data name="&gt;&gt;buttonExport.Name" xml:space="preserve">
+    <value>buttonExport</value>
+  </data>
+  <data name="&gt;&gt;buttonExport.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;buttonExport.Parent" xml:space="preserve">
+    <value>splitContainer1.Panel1</value>
+  </data>
+  <data name="&gt;&gt;buttonExport.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="labelKg.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -154,7 +181,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;labelKg.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
   </data>
   <data name="labelCm.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -181,7 +208,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;labelCm.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="textBoxWeight.Location" type="System.Drawing.Point, System.Drawing">
     <value>500, 77</value>
@@ -202,7 +229,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;textBoxWeight.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <data name="textBoxHight.Location" type="System.Drawing.Point, System.Drawing">
     <value>500, 58</value>
@@ -223,7 +250,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;textBoxHight.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="labelWeight.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -250,7 +277,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;labelWeight.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="labelHight.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -277,7 +304,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;labelHight.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="textBoxWorkDirPhone.Location" type="System.Drawing.Point, System.Drawing">
     <value>819, 32</value>
@@ -301,7 +328,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;textBoxWorkDirPhone.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="labelWorkDirPhone.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -328,7 +355,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;labelWorkDirPhone.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="dateTimePickerShowTo.Location" type="System.Drawing.Point, System.Drawing">
     <value>500, 30</value>
@@ -349,7 +376,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;dateTimePickerShowTo.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>9</value>
   </data>
   <data name="dateTimePickerShowFrom.Location" type="System.Drawing.Point, System.Drawing">
     <value>500, 10</value>
@@ -370,7 +397,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;dateTimePickerShowFrom.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>10</value>
   </data>
   <data name="labelShowTo.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -397,7 +424,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;labelShowTo.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>11</value>
   </data>
   <data name="labelShowFrom.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -424,7 +451,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;labelShowFrom.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>12</value>
   </data>
   <data name="radioButtonRoot.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -499,7 +526,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;groupBox1.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>13</value>
   </data>
   <data name="maskedTextBoxSleepDur.Location" type="System.Drawing.Point, System.Drawing">
     <value>819, 10</value>
@@ -526,7 +553,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;maskedTextBoxSleepDur.ZOrder" xml:space="preserve">
-    <value>13</value>
+    <value>14</value>
   </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -553,7 +580,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>14</value>
+    <value>15</value>
   </data>
   <data name="buttonShowOldData.Location" type="System.Drawing.Point, System.Drawing">
     <value>131, 15</value>
@@ -577,7 +604,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;buttonShowOldData.ZOrder" xml:space="preserve">
-    <value>15</value>
+    <value>16</value>
   </data>
   <data name="buttonRead.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 15</value>
@@ -601,7 +628,7 @@
     <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;buttonRead.ZOrder" xml:space="preserve">
-    <value>16</value>
+    <value>17</value>
   </data>
   <data name="&gt;&gt;splitContainer1.Panel1.Name" xml:space="preserve">
     <value>splitContainer1.Panel1</value>
@@ -628,7 +655,7 @@
     <value>0</value>
   </data>
   <data name="tabPageOriginTab.Text" xml:space="preserve">
-    <value>Table</value>
+    <value>Daily overview</value>
   </data>
   <data name="&gt;&gt;tabPageOriginTab.Name" xml:space="preserve">
     <value>tabPageOriginTab</value>
@@ -800,6 +827,33 @@
   </data>
   <data name="&gt;&gt;tabPageUserData.ZOrder" xml:space="preserve">
     <value>1</value>
+  </data>
+  <data name="tabPageStat.Location" type="System.Drawing.Point, System.Drawing">
+    <value>4, 22</value>
+  </data>
+  <data name="tabPageStat.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 3, 3, 3</value>
+  </data>
+  <data name="tabPageStat.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1326, 431</value>
+  </data>
+  <data name="tabPageStat.TabIndex" type="System.Int32, mscorlib">
+    <value>2</value>
+  </data>
+  <data name="tabPageStat.Text" xml:space="preserve">
+    <value>Statistics</value>
+  </data>
+  <data name="&gt;&gt;tabPageStat.Name" xml:space="preserve">
+    <value>tabPageStat</value>
+  </data>
+  <data name="&gt;&gt;tabPageStat.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TabPage, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tabPageStat.Parent" xml:space="preserve">
+    <value>tabControlMain</value>
+  </data>
+  <data name="&gt;&gt;tabPageStat.ZOrder" xml:space="preserve">
+    <value>2</value>
   </data>
   <data name="tabControlMain.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
